<resources>
    <string name="app_name">Gradmo</string>
    <string name="login_gradmo">Login Gradmo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="forget_password_">Forget Password?</string>
    <string name="or">OR</string>
    <string name="login_via_otp">Login via OTP</string>
    <string name="login_via_email">Login via Email</string>
    <string name="phone">Phone</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_gradmo">Join Gradmo</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="get_otp">Get OTP</string>
    <string name="complete_your_profile">Complete your Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="locality">Locality</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="educational_information">Educational Information</string>
    <string name="school_college_name">School/College Name</string>
    <string name="grade">Grade</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="course">Course</string>
    <string name="institutes">Institutes</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="view_profile">View Profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="ratings_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="enhance_your_learning_experience_with_us">Enhance your learning experience with us</string>
    <string name="promo_code">Promo Code</string>
    <string name="enter_your_promo_code">Enter Your Promo Code</string>
    <string name="grand_total">Grand Total</string>
    <string name="search">Search</string>
</resources>