<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tittle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/backButton"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingHorizontal="10dp"
                android:text="@string/complete_your_profile"
                android:fontFamily="@font/manrope_bold"
                android:textColor="@color/black"
                android:textSize="22sp"/>
            <ImageView
                android:id="@+id/backButton"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/back_button"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ScrollView
            app:layout_constraintBottom_toTopOf="@id/bottomLayout"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:layout_marginTop="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:clipChildren="false"
                android:clipToPadding="false">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/profileCardView"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="15dp"
                    app:cardCornerRadius="100dp"
                    app:strokeWidth="0dp"
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <ImageView
                        android:scaleType="centerCrop"
                        android:id="@+id/ivUserImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/user_profile_placeholder"/>
                </com.google.android.material.card.MaterialCardView>
                <ImageView
                    android:id="@+id/ivEditIcon"
                    android:layout_marginBottom="-15dp"
                    android:elevation="2dp"
                    android:layout_width="53dp"
                    android:layout_height="41dp"
                    android:src="@drawable/edit_pencil_icon"
                    app:layout_constraintStart_toStartOf="@id/profileCardView"
                    app:layout_constraintBottom_toBottomOf="@+id/profileCardView"
                    app:layout_constraintEnd_toEndOf="@id/profileCardView"/>
                <TextView
                    android:id="@+id/nameLabel"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/profileCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:text="Ujjwal Gupta"
                    android:fontFamily="@font/manrope_bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
                <LinearLayout
                    app:layout_constraintTop_toBottomOf="@+id/nameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/backButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:paddingHorizontal="10dp"
                        android:layout_marginTop="60dp"
                        android:text="@string/personal_information"
                        android:fontFamily="@font/manrope_bold"
                        android:textColor="@color/black"
                        android:textSize="22sp"/>
                    <EditText
                        android:id="@+id/etName"
                        style="@style/CommonLoginFlowEditText"
                        android:layout_width="match_parent"
                        android:layout_marginTop="15dp"
                        android:hint="@string/name"/>
                    <EditText
                        android:id="@+id/etEmail"
                        android:inputType="textEmailAddress"
                        style="@style/CommonLoginFlowEditText"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:hint="@string/email"/>
                    <EditText
                        android:id="@+id/etPhoneNumber"
                        android:inputType="phone"
                        style="@style/CommonLoginFlowEditText"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:hint="@string/phone"/>
                    <EditText
                        android:id="@+id/etLocality"
                        style="@style/CommonLoginFlowEditText"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:hint="@string/locality"/>
                    <TextView
                        android:id="@+id/etState"
                        style="@style/CommonLoginFlowEditText"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:hint="@string/state"
                        android:focusable="false"
                        android:clickable="true" />

                    <TextView
                        android:id="@+id/etCity"
                        style="@style/CommonLoginFlowEditText"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:hint="@string/city"
                        android:focusable="false"
                        android:clickable="true" />
                    <EditText
                        android:id="@+id/etCountry"
                        android:editable="false"
                        style="@style/CommonLoginFlowEditText"
                        android:layout_width="match_parent"
                        android:layout_marginTop="15dp"
                        android:text="INDIA"/>
                    <EditText
                        android:id="@+id/etPincode"
                        style="@style/CommonLoginFlowEditText"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:hint="@string/pincode"/>
                    <View
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/backButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:paddingHorizontal="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/educational_information"
                        android:fontFamily="@font/manrope_bold"
                        android:textColor="@color/black"
                        android:textSize="22sp"/>
                    <EditText
                        android:id="@+id/etSchoolName"
                        style="@style/CommonLoginFlowEditText"
                        android:layout_width="match_parent"
                        android:layout_marginTop="15dp"
                        android:hint="@string/school_college_name"/>
                    <EditText
                        android:id="@+id/etGrade"
                        android:inputType="textEmailAddress"
                        style="@style/CommonLoginFlowEditText"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:hint="@string/grade"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent">
            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="20dp"
                style="@style/CommonButton2"
                android:fontFamily="@font/manrope_medium"
                android:textSize="18sp"
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingVertical="15dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>