<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".ui.signup.fragment.ForgotPasswordFragment">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/cross_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:layout_marginStart="17dp"
                    android:text="@string/forgot_password"
                    android:textSize="33sp"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
                <ImageView
                    android:id="@+id/bookIcon"
                    android:layout_width="112dp"
                    android:layout_height="95dp"
                    android:layout_marginTop="45dp"
                    android:src="@drawable/gradmo_book_icon"
                    app:layout_constraintTop_toBottomOf="@id/welcomeText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <EditText
                    android:id="@+id/phoneInput"
                    style="@style/CommonLoginFlowEditText"
                    android:inputType="number"
                    android:layout_width="0dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/phone"
                    app:layout_constraintTop_toBottomOf="@id/bookIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnResetPassword"
                    style="@style/CommonButton2"
                    android:backgroundTint="@color/theme_blue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="104dp"
                    android:text="@string/submit"
                    app:layout_constraintTop_toBottomOf="@id/phoneInput"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </LinearLayout>
</layout>